# ctti

./: .clang-format  .clangd  .gitignore  CMAKE_IMPROVEMENTS.md  CMakeLists.txt  LICENSE.md  README.md  buckaroo.json  conanfile.py  inception.py
cmake/: CPM.cmake  ctti-config.cmake.in  ctti_config.cmake.in  install.cmake
examples/: CMakeLists.txt  main.cpp
include/ctti/: attributes.hpp  concepts.hpp  constructor.hpp  ctti.hpp  detailed_nameof.hpp  enum_utils.hpp  hash.hpp  hash_literal.hpp  inheritance.hpp  map.hpp  model.hpp  name.hpp  nameof.hpp  overload.hpp  reflection.hpp  static_value.hpp  symbol.hpp  symbol_from_hash.hpp  template_info.hpp  tie.hpp  type_id.hpp  type_tag.hpp
include/ctti/detail/: attributes_impl.hpp  compile_time_string.hpp  concepts_impl.hpp  constructor_impl.hpp  entity_name.hpp  enum_utils_impl.hpp  hash.hpp  hash_impl.hpp  inheritance_impl.hpp  language_features.hpp  map_impl.hpp  member_traits.hpp  meta.hpp  model_impl.hpp  name_filters.hpp  name_impl.hpp  name_parser.hpp  overload_impl.hpp  overload_resolution.hpp  preprocessor.hpp  pretty_function.hpp  reflection_impl.hpp  static_value_impl.hpp  std_type_names.hpp  symbol_impl.hpp  template_info_impl.hpp  tie_impl.hpp  type_id_impl.hpp  type_tag_impl.hpp
scripts/: lint.sh
test_package/: CMakeLists.txt  conanfile.py  test_ctti.cpp
tests/: CMakeLists.txt  advanced_symbol_tests.cpp  complex_model_tests.cpp  detailed_nameof.cpp  entity_name_tests.cpp  hash.cpp  hash_literal_tests.cpp  main.cpp  map.cpp  metaprogramming_tests.cpp  model.cpp  name_filters.cpp  nameof.cpp  symbol.cpp  test_attributes.cpp  test_concepts.cpp  test_constructor.cpp  test_enum_utils.cpp  test_hash.cpp  test_hash_literal.cpp  test_inheritance.cpp  test_map.cpp  test_model.cpp  test_name.cpp  test_overload.cpp  test_reflection.cpp  test_static_value.cpp  test_symbol.cpp  test_template_info.cpp  test_tie.cpp  test_type_id.cpp  test_type_tag.cpp  tie.cpp  type_id_tests.cpp
tests/detail/: test_compile_time_string.cpp  test_entity_name.cpp  test_hash.cpp  test_meta.cpp  test_name_filters.cpp  test_name_parser.cpp  test_overload_resolution.cpp  test_pretty_function.cpp
tests/static/: CMakeLists.txt  hash.cpp  meta_tests.cpp  model.cpp  name.cpp  static_value.cpp  symbol.cpp
